fix(assets/css) Correções:  altera alguns tamanhos do site e ajustes css de min height e wrap

--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -11,7 +11,7 @@
 .main-content {
   max-width: 120rem;
   margin: 0 auto;
-  padding: var(--gap);
+  padding: 10rem var(--gap);
 }
 /* for each section on website */
 .section {
