--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  text-decoration: none;
   border: none;
   box-shadow: none;
 }
@@ -26,16 +25,16 @@ h6 {
 }
 h1 {
   text-transform: uppercase;
-  font-size: 7rem;
+  font-size: 6rem;
 }
 h2 {
-  font-size: 6rem;
+  font-size: 5.5rem;
   text-transform: uppercase;
   line-height: 1.2;
   margin-bottom: 4rem;
 }
 h3 {
-  font-size: 5.5rem;
+  font-size: 5rem;
 }
 h4 {
   font-size: 4.5rem;
