--- a/assets/css/image.css
+++ b/assets/css/image.css
@@ -1,10 +1,5 @@
-.intro-img {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.intro-img img {
+.intro-img img,
+.intro-img svg {
   max-width: 100%;
   height: auto;
 }
