--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -6,6 +6,7 @@ font-family: 'Open Sans', sans-serif; // regular an bold : 400/italic, 700;
 */
 
 .menu {
+  background: var(--white-color);
   position: fixed;
   z-index: 1;
   top: 0;
@@ -36,6 +37,7 @@ font-family: 'Open Sans', sans-serif; // regular an bold : 400/italic, 700;
   display: block;
   padding: 2rem;
   font-size: 1.8rem;
+  color: var(--primary-color);
   position: relative;
 }
 .menu ul li a::after {
@@ -49,8 +51,8 @@ font-family: 'Open Sans', sans-serif; // regular an bold : 400/italic, 700;
   transition: all 300ms ease-in-out;
 }
 .menu ul li a:hover::after {
-  left: 25%;
   width: 50%;
+  left: 25%;
 }
 .menu-spacing {
   height: 65px;
